Inicio Projeto Box-3D

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="max-width">
                 <div class="logo"><a href="#" title="Marcas Famosas">Marcas<span> Famosas</span></a></div>
                 <ul class="menu">
-                    <li><a href="#" class="menu-btn">Home</a></li>
+                    <li><a href="http://127.0.0.1/box-3d" class="menu-btn">Home</a></li>
                     <li><a href="#mark" class="menu-btn">Marcas</a></li>
                 </ul>
                 <!--Menu Mobile-->
